<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>jpublankproject</groupId>
    <artifactId>masterpom</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <artifactId>view</artifactId>
  <name>View</name>
  <dependencies>
  	<dependency>
  		<groupId>jpublankproject</groupId>
  		<artifactId>contract</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>jpublankproject</groupId>
  		<artifactId>model</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  	</dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>5.11.0</version>
          <scope>compile</scope>
      </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>